--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,7 @@
                 }
               ],
               "index": {
-                "input": "src/index.prod.html",
+                "input": "src/index.html",
                 "output": "index.html"
               },
               "optimization": true,
