Fix: use legacy-peer-deps for Vercel build

--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "email": "vj8067202@gmail.com",
     "url": "https://github.com/vanshjainofficial/tetris-game"
   },
-  "description": "Tetris game built with Angular and Akita 🎮",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --configuration production",
-    "test": "ng test",
-    "lint": "ng lint",
-    "lint:fix": "ng lint --fix",
-    "e2e": "ng e2e"
-  },
+  "description": "Tetris game built with Angular and Akita 🎮","scripts": {
+  "ng": "ng",
+  "start": "ng serve",
+  "build": "ng build --configuration production",
+  "test": "ng test",
+  "lint": "ng lint",
+  "lint:fix": "ng lint --fix",
+  "e2e": "ng e2e",
+  "prepare": "npm install --legacy-peer-deps"
+},
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint"
