--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist/angular-tetris"
+  "outputDirectory": "dist/angular-tetris",
+  "build": {
+    "env": {
+      "NPM_FLAGS": "--legacy-peer-deps"
+    }
+  }
 }
