Add vercel-build.sh for Vercel compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist/angular-tetris",
-  "build": {
-    "env": {
-      "NPM_FLAGS": "--legacy-peer-deps"
-    }
-  }
+  "buildCommand": "./vercel-build.sh",
+  "outputDirectory": "dist/angular-tetris"
 }
